# crowdplay-bot-rs

./: .gitignore  Cargo.toml  README.md  index.md
src/: main.rs
src/game/: ftl.rs  mod.rs  nds.rs  supported_game.rs
src/model/: app_model.rs  bot.rs  key.rs  mod.rs  win_utils.rs
