[package]
name = "crowdplay-bot-rs"
version = "1.0.0"
authors = ["Kenneth <Kenneth@DESKTOP-VHTOUHH>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
confy = "0.4.0"
json = "0.12"
serde = "1.0.126"
serenity = "0.10"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
typemap_rev = "0.1.5"
inputbot = "0.5.0"
winapi = "0.3.9"